--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack --mode=development",
     "start": "npm run build && webpack-dev-server --open --mode=development",
-    "lint": "eslint src/*.js"
+    "lint": "eslint src/*.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "eslint": "^8.18.0",
     "eslint-webpack-plugin": "^2.7.0",
     "html-webpack-plugin": "^4.5.2",
+    "jest": "^24.9.0",
     "style-loader": "^1.3.0",
     "webpack": "4.46.0",
     "webpack-cli": "^3.3.12",
